# RFirefoxData

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: bookmarks.R  decrypt.R  places.R  profile.R  pwd.R  tabs.R
src/: Makevars  Makevars.in  decrypt.c
